--- a/src/pages/brand.scss
+++ b/src/pages/brand.scss
@@ -22,7 +22,7 @@
   @media screen and (max-width: 1550px) {
     padding-left: 60px;
     padding-right: 60px;
-    align-items: flex-end;
+    // align-items: flex-end;
     .brand-page__info {
       min-width: 500px;
     }
@@ -256,7 +256,7 @@
       top: 0;
       left: 0;
       height: 100%;
-      padding: 40px 5px 100px 90px;
+      // padding: 40px 5px 100px 90px;
     }
     @media screen and (max-width: 1550px) {
       height: 597px;
