--- a/src/pages/faq.scss
+++ b/src/pages/faq.scss
@@ -39,6 +39,7 @@
     @media screen and (max-width: 767px) {
       padding-left: 30px;
       padding-right: 30px;
+      margin-top: 20px;
     }
     .faq-page__descr {
       display: none;
