--- a/src/pages/faq.scss
+++ b/src/pages/faq.scss
@@ -7,6 +7,15 @@
     @media screen and (max-width: 767px) {
       background: rgba(0, 0, 0, 0.9);
     }
+    .main-background__rect1,
+    .main-background__rect5,
+    .main-background__rect3,
+    .main-background__rect4,
+    .main-background__circle4,
+    .main-background__circle6,
+    .main-background__circle7 {
+      display: none;
+    }
   }
   .faq-page__content {
     margin-top: 55px;
@@ -57,6 +66,56 @@
   }
 
   .wtf-block {
+    .faq__collapse {
+      width: 70%;
+      margin-top: 70px;
+      background-color: transparent;
+      .ant-collapse-item > .ant-collapse-header .ant-collapse-arrow {
+        display: flex;
+        align-items: center;
+        border: 3px solid black;
+        border-radius: 50%;
+        justify-content: center;
+        width: 48px;
+        height: 48px;
+        padding: 0;
+      }
+      .ant-collapse-item-active .ant-collapse-header {
+        color: #17ca9b;
+        &:hover {
+          color: #17ca9b;
+        }
+      }
+      .ant-collapse-content-box {
+        p {
+          font-weight: normal;
+          font-size: 30px;
+          line-height: 121%;
+          text-align: start;
+          color: #5f6367;
+          margin-left: 65px;
+        }
+      }
+      .ant-collapse-item {
+        border-bottom: unset;
+      }
+      .ant-collapse-header {
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 44px;
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+        span {
+          margin-right: 20px;
+          position: static;
+        }
+        color: #737373;
+        &:hover {
+          color: #5f6367;
+        }
+      }
+    }
     .step-card {
       cursor: pointer;
       p {
