--- a/src/components/LK/Button/button.scss
+++ b/src/components/LK/Button/button.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 33%;
+  cursor: pointer;
   p {
     font-size: 14px;
     line-height: 17px;
