--- a/src/pages/register.scss
+++ b/src/pages/register.scss
@@ -1,11 +1,19 @@
 .page-auth {
   background-image: url("../assets/img/regPage1.png");
+  background-position: bottom;
+  @media screen and (min-width: 767px) and (max-height: 940px) {
+    background-position: center 55%;
+  }
+  @media screen and (max-width: 1200px) {
+    background-position: 0 0;
+  }
   @media screen and (max-width: 767px) {
     background-image: none;
   }
+
+  overflow-x: hidden;
   min-height: 100vh;
-  background-size: cover;
-  background-position: bottom;
+  // background-size: cover;
   background-repeat: no-repeat;
   position: relative;
   .page-auth__background {
@@ -41,7 +49,8 @@
     max-width: 1470px;
     display: flex;
     margin: auto;
-    padding-top: 67px;
+    padding-top: 45px;
+    min-height: 89vh;
     .page-auth__background-item_m {
       width: 120%;
       height: 490px;
@@ -106,6 +115,11 @@
 
 .page-auth__alien-block {
   width: 50%;
+  min-height: 697px;
+  background-image: url("../assets/img/authBG.png");
+  background-repeat: no-repeat;
+  background-position: center 0;
+  border-radius: 10px 0 0 10px;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -120,6 +134,19 @@
     a {
       color: rgba(0, 0, 0, 0.8);
       font-weight: bold;
+      position: relative;
+      &::before {
+        content: "";
+        transition: 0.2s;
+        position: absolute;
+        content: "";
+        bottom: 0;
+        width: 0;
+        border-bottom: 1px solid #000;
+      }
+    }
+    a:hover::before {
+      width: 100%;
     }
     margin-bottom: 10px;
   }
@@ -144,6 +171,8 @@
     bottom: 0;
   }
   @media screen and (max-width: 1200px) {
+    background-image: unset;
+    min-height: unset;
     .page-auth__alien-row_2,
     .page-auth__alien-row_3,
     img {
@@ -172,7 +201,7 @@
     margin-left: 17px;
   }
   .auth-form-block__input {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     width: 100%;
     input {
       padding-left: 35px;
@@ -226,16 +255,22 @@
 }
 
 .auth-form-block__reg-btn {
-  margin-left: 107px;
+  margin-left: 92px;
   margin-bottom: 44px;
   display: flex;
   justify-content: space-between;
-  max-width: 430px;
+  max-width: 452px;
   cursor: pointer;
+  border-radius: 40px;
+  padding: 10px 20px;
+  border: 1px solid white;
+  &:hover {
+    border: 1px solid #dadada;
+  }
   p {
     font-weight: 600;
     font-size: 22px;
-    line-height: 27px;
+    // line-height: 27px;
     color: #000000;
   }
   @media screen and (max-width: 1200px) {
@@ -296,6 +331,22 @@
   color: rgba(0, 0, 0, 0.6);
   a {
     color: #17ca9b;
+    position: relative;
+    &::before {
+      content: "";
+      transition: 0.2s;
+      position: absolute;
+      content: "";
+      bottom: 0;
+      width: 0;
+      border-bottom: 1px solid #000;
+    }
+  }
+  a:hover {
+    color: #17ca9b;
+    &::before {
+      width: 100%;
+    }
   }
   @media screen and (max-width: 1200px) {
     font-size: 15px;
