--- a/src/pages/brand.scss
+++ b/src/pages/brand.scss
@@ -158,6 +158,7 @@
   height: 95px;
   box-shadow: inset 0px 3px 3px rgba(0, 0, 0, 0.25);
   margin-bottom: 30px;
+  z-index: 2;
   &:hover {
     color: white
   }
