--- a/src/pages/faq.scss
+++ b/src/pages/faq.scss
@@ -144,6 +144,10 @@
     @media screen and (max-width: 480px) {
       width: 55%;
       margin-top: 30px;
+      // flex-direction: column;
+      .faq__collapse {
+        margin-left: -30px;
+      }
       .step-card {
         height: 141px;
         width: 90px;
@@ -160,6 +164,12 @@
             height: 84px;
           }
         }
+      }
+      .ant-collapse-content-box p {
+
+      }
+      .ant-collapse-header {
+
       }
     }
   }
