--- a/src/components/LK/LKContent/lkcontent.scss
+++ b/src/components/LK/LKContent/lkcontent.scss
@@ -2,7 +2,8 @@
   margin-top: 13px;
   width: 725px;
   margin-left: 121px;
-
+  position: relative;
+  animation: bTot ease 1s backwards;
   .lk-content__block {
     padding: 49px 135px 33px 135px;
     margin-left: auto;
@@ -86,5 +87,14 @@
     width: 12px;
     top: 20px;
     right: 20px;
+  }
+}
+
+@keyframes bTot {
+  0% {
+    top: -10000px;
+  }
+  100% {
+    top: 0;
   }
 }
