--- a/src/pages/register.scss
+++ b/src/pages/register.scss
@@ -278,7 +278,8 @@
   }
   @media screen and (max-width: 767px) {
     margin: auto;
-    height: 20px;
+    height: 40px;
+    // padding: unset;
     p {
       font-size: 16px;
       line-height: 20px;
