buttons add/remove

--- a/src/pages/addQue.scss
+++ b/src/pages/addQue.scss
@@ -74,6 +74,7 @@
         font-size: 43.125px;
         line-height: 53px;
         margin: 0 20px;
+        cursor: pointer;
         color: rgba(0, 0, 0, 0.3);
       }
     }
