--- a/src/pages/addposts.scss
+++ b/src/pages/addposts.scss
@@ -47,3 +47,13 @@
     }
   }
 }
+.add-page, .archive-page {
+  .brand-card {
+    background: #DADADA;
+    img {
+      width: 100%;
+      padding: 0;
+      border-radius: 20px;
+    }
+  }
+}
