--- a/src/pages/register.scss
+++ b/src/pages/register.scss
@@ -42,6 +42,45 @@
     top: 140px;
     @media screen and (max-width: 767px) {
       right: -140px;
+      display: none;
+    }
+  }
+  .page-auth__background_2_m {
+    background: #dadada;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    right: -60px;
+    top: 160px;
+    display: none;
+    @media screen and (max-width: 767px) {
+      display: block;
+    }
+  }
+  .page-auth__background_3 {
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 34px solid #0fdab3;
+    transform: rotate(-45deg);
+    right: 60px;
+    top: 200px;
+    display: none;
+    z-index: 2;
+    @media screen and (max-width: 767px) {
+      display: block;
+    }
+  }
+  .page-auth__background_4 {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background: #edeff4;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    left: -70px;
+    top: 540px;
+    @media screen and (max-width: 767px) {
+      right: -140px;
     }
   }
 
@@ -316,7 +355,7 @@
       margin: 15px auto;
       a {
         height: 30px;
-        width: 30px;
+        width: 36px;
       }
     }
   }
