--- a/src/components/LK/LKNav/lknav.scss
+++ b/src/components/LK/LKNav/lknav.scss
@@ -56,6 +56,9 @@
   @media screen and (max-width: 1058px) {
     padding: 36px 115px 46px 115px;
   }
+  @media screen and (max-width: 767px) {
+    padding: 36px 60px 46px 60px;
+  }
   @media screen and (max-width: 622px) {
     padding: 20px 40px;
     .lknav__nav-panel-title {
