--- a/src/components/LK/LKContent/LKDonate/lkdonate.scss
+++ b/src/components/LK/LKContent/LKDonate/lkdonate.scss
@@ -139,6 +139,7 @@
         margin-bottom: 13px;
         font-size: 12px;
         line-height: 15px;
+        padding-left: 30px;
       }
       &:focus {
         background-color: #dadada;
