--- a/src/components/TestSlide/testslide.scss
+++ b/src/components/TestSlide/testslide.scss
@@ -44,6 +44,7 @@
     height: 65px;
     font-weight: normal;
     font-size: 36px;
+    overflow: hidden;
     line-height: 44px;
 
     letter-spacing: 0.149263px;
@@ -56,7 +57,8 @@
     .test-slide__progress_field,
     .test-slide__progress_space {
       position: absolute;
-      height: 100%;
+      height: 1000px;
+      transform: rotate(30deg);
       z-index: 2;
       // border-radius: 0 0 20px 20px;
     }
@@ -68,7 +70,7 @@
     .test-slide__progress_space {
       background: white;
       border-radius: 0 0 20px 0;
-      right: 0;
+      right: -10px;
       // box-shadow: 0px 13px 13px rgb(0 0 0 / 25%)
     }
 
@@ -138,8 +140,9 @@
 
     padding: 20px 15px 40px 15px;
     .test-slide__brand-logo {
+      position: absolute;
       height: 97px;
-      left: 98px;
+      right: -20px;
       top: -40px;
       width: 97px;
       img {
