--- a/src/pages/brand.scss
+++ b/src/pages/brand.scss
@@ -1,5 +1,20 @@
 .brand-page {
   min-height: 100vh;
+  .archive-background {
+    position: absolute;
+    min-height: calc(100vh - 95px);
+    @media screen and (max-width: 1084px) {
+      min-height: calc(100vh - 67px);
+    }
+    @media screen and (max-width: 1084px) {
+      .archive-background__item_1 {
+        left: -179px;
+      }
+      .archive-background__item_2 {
+        right: -106px;
+      }
+    }
+  }
 }
 .brand-page__content {
   display: flex;
@@ -160,10 +175,10 @@
   margin-bottom: 30px;
   z-index: 2;
   &:hover {
-    color: white
+    color: white;
   }
   transition: 0.5s;
-  @media screen and (max-width: 1090px) { 
+  @media screen and (max-width: 1090px) {
     font-size: 28px;
   }
 }
@@ -257,9 +272,10 @@
       border-radius: 20px;
     }
     img {
-      position: absolute;
-      top: 0;
-      left: 0;
+      // position: absolute;
+      // top: 0;
+      // left: 0;
+      margin: auto;
       height: 100%;
       // padding: 40px 5px 100px 90px;
     }
