--- a/src/components/LK/LKContent/LKSettings/lksettings.scss
+++ b/src/components/LK/LKContent/LKSettings/lksettings.scss
@@ -157,7 +157,7 @@
   font-size: 20px;
   line-height: 24px;
   text-align: center;
-
+  cursor: pointer;
   color: #ffffff;
   &:hover {
     background: rgba(0, 0, 0, 0.4);
@@ -166,6 +166,7 @@
 .lk-btn__disable {
   box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.25);
   cursor: inherit;
+  cursor: pointer;
   background-color: #c4c4c4;
   &:hover {
     background-color: #c4c4c4;
