--- a/src/components/LK/LKContent/lkcontent.scss
+++ b/src/components/LK/LKContent/lkcontent.scss
@@ -1,5 +1,5 @@
 .lk-content {
-  margin-top: 13px;
+  margin-top: 19px;
   width: 725px;
   margin-left: 121px;
   position: relative;
@@ -59,6 +59,13 @@
   cursor: pointer;
   z-index: 10;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  &:hover {
+    span,
+    span::before,
+    span::after {
+      background-color: black;
+    }
+  }
   span,
   span::before,
   span::after {
