--- a/src/components/LK/LKNav/lknav.scss
+++ b/src/components/LK/LKNav/lknav.scss
@@ -1,7 +1,7 @@
 .lk-nav {
   display: flex;
   flex-direction: column;
-  // justify-content: center;
+  justify-content: space-between;
   margin-top: 19px;
   @media screen and (max-width: 767px) {
     width: 100%;
