--- a/src/pages/addpost.scss
+++ b/src/pages/addpost.scss
@@ -44,6 +44,7 @@
     font-size: 16px;
     line-height: 20px;
     z-index: 2;
+    cursor: pointer;
     text-align: center;
     color: rgba(255, 255, 255, 0.8);
     border-radius: 0;
