--- a/src/pages/archive.scss
+++ b/src/pages/archive.scss
@@ -121,6 +121,7 @@
       font-weight: bold;
       font-size: 30px;
       line-height: 37px;
+      cursor: pointer;
       text-align: center;
       width: 100%;
       color: #ffffff;
