--- a/src/pages/lk.scss
+++ b/src/pages/lk.scss
@@ -8,7 +8,7 @@
 
 .lk-page__container {
   display: flex;
-  height: 922px;
+  max-height: 922px;
   max-width: 1508px;
   padding: 0 50px 20px;
   margin: auto;
