--- a/src/pages/test.scss
+++ b/src/pages/test.scss
@@ -26,7 +26,9 @@
   @media screen and (max-width: 767px) {
     display: none;
   }
-
+  .center.centered-slide .slick-slide.slick-active.slick-current {
+    margin: auto;
+  }
   .center {
     .slick-list {
       overflow: visible;
