--- a/src/components/LK/LKContent/LKHistory/lkhistory.scss
+++ b/src/components/LK/LKContent/LKHistory/lkhistory.scss
@@ -1,6 +1,6 @@
 .history-block {
   // margin-top: 9px;
-  height: 263px;
+  min-height: 263px;
   .history-block__title {
     font-weight: 600;
     font-size: 20px;
