--- a/src/pages/register.scss
+++ b/src/pages/register.scss
@@ -339,7 +339,7 @@
   .auth-form-block__soc-icon {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 30px;
   }
   @media screen and (max-width: 767px) {
