--- a/src/pages/addpost.scss
+++ b/src/pages/addpost.scss
@@ -37,6 +37,10 @@
   display: none;
   background: white;
   justify-content: space-between;
+  position:absolute;
+  bottom:0;
+  left: 0;
+  width: 100%;
   .brand-page__btn {
     height: 50px;
     background-color: black;
