--- a/src/components/LK/LKContent/LKSettings/lksettings.scss
+++ b/src/components/LK/LKContent/LKSettings/lksettings.scss
@@ -44,7 +44,7 @@
     white-space: nowrap;
   }
   @media screen and (max-width: 767px) {
-    padding-top: 58px !important;
+    // padding-top: 58px !important;
     justify-content: center;
     text-align: center;
     .settings-block__mobile-wrapper {
