--- a/src/components/LK/LKContent/lkcontent.scss
+++ b/src/components/LK/LKContent/lkcontent.scss
@@ -3,7 +3,7 @@
   width: 725px;
   margin-left: 121px;
   position: relative;
-  animation: bTot ease 1s backwards;
+  // animation: bTot ease 1s backwards;
   .lk-content__block {
     padding: 49px 135px 33px 135px;
     margin-left: auto;
