--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -52,10 +52,10 @@
   .header__burger-menu {
     position: absolute;
     display: none;
-    animation: mobileMenuOpen 0.5s backwards;
-    height: 100vh;
+    // animation: mobileMenuOpen 0.5s backwards;
+    height: calc(100vh - 7px);
     width: 85%;
-    top: -18px;
+    top: 0px;
     overflow-y: scroll;
     left: 0;
     background: #fffefe;
@@ -118,6 +118,7 @@
           width: 45px;
           height: 45px;
           border-radius: 50%;
+          background-color: rgba(0, 0, 0, 0.95);
         }
         .header__profile-text-block {
           margin-left: 15px;
@@ -172,7 +173,7 @@
       z-index: 10;
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       &:hover {
-        background-color: rgb(61, 61, 61);
+        // background-color: rgb(61, 61, 61);
         span,
         span::before,
         span::after {
@@ -263,7 +264,7 @@
       width: 45px;
       height: 45px;
       border-radius: 50%;
-      background: #fff;
+      background-color: rgba(0, 0, 0, 0.95);
     }
     .header__profile-name {
       margin-left: 13px;
