--- a/src/components/LK/LKNav/lknav.scss
+++ b/src/components/LK/LKNav/lknav.scss
@@ -224,9 +224,11 @@
     height: 100%;
     align-items: center;
     width: 50%;
-    .ant-progress-inner.ant-progress-circle-gradient {
-      filter: drop-shadow(0px 8.80091px 8.80091px rgba(0, 0, 0, 0.25));
+    .ant-progress {
+      border-radius: 50%;
+      box-shadow: 0px 8.80091px 8.80091px rgba(0, 0, 0, 0.25);
     }
+
     .ant-progress-text {
       color: #17ca9b;
     }
