--- a/src/components/TestSlide/testslide.scss
+++ b/src/components/TestSlide/testslide.scss
@@ -36,7 +36,7 @@
   .test-slide__progress {
     width: 100%;
     position: absolute;
-    bottom: 1px;
+    bottom: -1px;
     left: 0px;
     display: flex;
     align-items: center;
@@ -68,7 +68,7 @@
       // box-shadow: 0px 13px 13px rgb(0 0 0 / 25%)
     }
     .test-slide__progress_space {
-      background: white;
+      background: rgba(255, 255, 255, 0.95);
       border-radius: 0 0 20px 0;
       right: -10px;
       // box-shadow: 0px 13px 13px rgb(0 0 0 / 25%)
@@ -76,7 +76,7 @@
 
     @media screen and (max-width: 767px) {
       height: 20px;
-      bottom: 0;
+      bottom: -1px;
       font-weight: 300;
       font-size: 10px;
       line-height: 12px;
